--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* Setup Styles */
+
 html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
 
 input::-webkit-outer-spin-button,
@@ -16,31 +17,34 @@ input[type=number] {
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
 /* Base Styles */
+
 html {
     font-size: 125%; 
 }
 
-main {
-    height: 90vh;
+body {
+    height: 100vh; 
+    display: flex; 
+    flex-direction: column; 
     background-color: #82C0CC;
 }
 
 .wrapper {
     width: 90%; 
-    height: 100%; 
+    height: 100%;
     max-width: 1200px; 
     margin: 0 auto; 
     display: flex;
     flex-direction: column; 
     justify-content: space-between;
     align-items: center; 
-    padding-top: 75px;
-    padding-bottom: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 h1,
 h2 {
-    font-family: 'Yeseva One', cursive;
+    font-family: 'Yeseva One', serif;
 }
 
 h1 {
@@ -58,28 +62,94 @@ p {
 
 .wrapper > div {
     background-color: #f7f4f2; 
+    padding: 0px 20px; 
+    border-radius: 10px; 
+    margin-bottom: 25px; 
 }
 
-/* Form Styles */
+/* Top Header */
+div.top {
+    padding: 0px 60px 20px 60px; 
+}
+
+/* Form */
+
 form {
     font-family: 'Roboto', sans-serif;
     font-weight: 300; 
-    background-color: #fdfcfc; 
+    background-color: #f7f4f2; 
+    padding: 20px 20px; 
+    border-radius: 10px;  
+    margin-bottom: 25px; 
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center;
+}
+
+label {
+    margin-bottom: 10px; 
 }
 
 input {
     border: none;
     outline: none; 
     border-bottom: 4px solid transparent; 
+    font-family: 'Roboto', sans-serif;
+    padding: 2px 10px; 
+    margin-right: 5px; 
+    text-align: right; 
+    width: 35%; 
 }
 
 input:focus {
-    border-bottom: 4px solid #FFA62B; 
+    border-bottom: 4px solid #16697A; 
+}
+
+div.input-and-button {
+    display: flex;
+    justify-content: center;
 }
 
 /* Button Styles */
 
+button {
+    border: 1px solid #82C0CC;
+    color: #f7f4f2; 
+    background-color: #82C0CC;
+    transition: 0.3s;
+    font-family: 'Roboto', sans-serif;
+    padding: 10px 20px; 
+    margin: 5px;
+    border-radius: 5px;
+}
+
+button:focus,
+button:hover {
+    border: 1px solid #16697A;
+    color: #f7f4f2; 
+    background-color: #16697A;
+}
+
 /* Control Buttons */
+
+div.control-buttons {
+    padding: 20px 20px;
+    margin-bottom: 0px; 
+    background-color: transparent;
+}
+
+div.control-buttons button {
+    border: 2px solid #16697A;
+    background-color: #16697A;
+}
+
+div.control-buttons button:focus,
+div.control-buttons button:hover {
+    border: 2px solid #f7f4f2;
+    background-color: transparent; 
+}
+
 /* #resume-btn,
 #pause-btn,
 #reset-btn {
@@ -91,6 +161,7 @@ input:focus {
 }
 
 /* Footer */
+
 footer { 
     background-color: black;
     color: white; 
@@ -98,7 +169,7 @@ footer {
     flex-direction: column; 
     align-items: center; 
     padding: 10px 0px 10px 0px; 
-    height: 10vh; 
+    margin-top: auto; 
 }
 
 footer p {
@@ -122,5 +193,5 @@ a {
 
 a:hover,
 a:focus {
-    border-bottom: 2px solid #FFA62B;
+    border-bottom: 2px solid #16697A;
 }
