--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ p {
 .wrapper > div {
     background-color: #f7f4f2; 
     padding: 0px 20px; 
-    border-radius: 10px; 
+    border-radius: 30px; 
     margin-bottom: 25px; 
 }
 
@@ -72,19 +72,24 @@ div.top {
     padding: 0px 60px 20px 60px; 
 }
 
+/* Info Display */
+div.info-display {
+    padding: 0px 60px; 
+}
+
 /* Form */
 
 form {
     font-family: 'Roboto', sans-serif;
     font-weight: 300; 
     background-color: #f7f4f2; 
-    padding: 20px 20px; 
-    border-radius: 10px;  
+    padding: 30px 30px; 
     margin-bottom: 25px; 
     display: flex;
     flex-direction: column; 
     align-items: center; 
     justify-content: center;
+    border-radius: 25px;  
 }
 
 label {
@@ -94,16 +99,17 @@ label {
 input {
     border: none;
     outline: none; 
-    border-bottom: 4px solid transparent; 
+    border: 1px solid transparent; 
     font-family: 'Roboto', sans-serif;
-    padding: 2px 10px; 
+    padding: 2px 5px; 
     margin-right: 5px; 
-    text-align: right; 
+    text-align: center; 
     width: 35%; 
+    border-radius: 30px; 
 }
 
 input:focus {
-    border-bottom: 4px solid #16697A; 
+    border: 1px solid #16697A; 
 }
 
 div.input-and-button {
@@ -111,24 +117,24 @@ div.input-and-button {
     justify-content: center;
 }
 
-/* Button Styles */
+/* General Button Styles */
 
 button {
-    border: 1px solid #82C0CC;
+    border: 2px solid #16697A;
+    background-color: #16697A;
     color: #f7f4f2; 
-    background-color: #82C0CC;
     transition: 0.3s;
     font-family: 'Roboto', sans-serif;
     padding: 10px 20px; 
     margin: 5px;
-    border-radius: 5px;
+    border-radius: 30px;
 }
 
 button:focus,
 button:hover {
-    border: 1px solid #16697A;
+    border: 2px solid #82C0CC;
+    background-color: #82C0CC; 
     color: #f7f4f2; 
-    background-color: #16697A;
 }
 
 /* Control Buttons */
@@ -137,26 +143,18 @@ div.control-buttons {
     padding: 20px 20px;
     margin-bottom: 0px; 
     background-color: transparent;
-}
-
-div.control-buttons button {
-    border: 2px solid #16697A;
-    background-color: #16697A;
+    display: flex; 
 }
 
 div.control-buttons button:focus,
 div.control-buttons button:hover {
     border: 2px solid #f7f4f2;
-    background-color: transparent; 
+    background-color: #82C0CC; 
 }
 
-/* #resume-btn,
+#resume-btn,
 #pause-btn,
 #reset-btn {
-    display: none; 
-} */
-
-#resume-btn {
     display: none; 
 }
 
@@ -194,4 +192,94 @@ a {
 a:hover,
 a:focus {
     border-bottom: 2px solid #16697A;
+}
+
+/* Media Queries */
+
+@media (max-width: 470px) {
+    html {
+        font-size: 110%; 
+    }
+
+    form {
+        padding: 25px 25px; 
+    }
+}
+
+@media (max-width: 430px) {
+    h1 {
+        font-size: 2.3rem; 
+    }
+
+    h2 {
+        font-size: 1.9rem; 
+    }
+
+    /* Top Header */
+    div.top {
+        padding: 0px 50px 20px 50px; 
+    }
+
+    /* Info Display */
+    div.info-display {
+        padding: 0px 50px; 
+    }
+}
+
+@media (max-width: 381px) {
+    /* Top Header */
+    div.top {
+        padding: 0px 40px 20px 40px; 
+    }
+
+    /* Info Display */
+    div.info-display {
+        padding: 0px 40px; 
+    }
+}
+
+@media (max-width: 376px) {
+    button {
+        min-width: 142px;
+    }
+}
+
+@media (max-width: 365px) {
+    /* Top Header */
+    div.top {
+        padding: 0px 30px 20px 30px; 
+    }
+
+    /* Info Display */
+    div.info-display {
+        padding: 0px 30px; 
+    }
+}
+
+@media (max-width: 343px) {
+    /* Top Header */
+    div.top {
+        padding: 0px 20px 20px 20px; 
+    }
+
+    /* Info Display */
+    div.info-display {
+        padding: 0px 20px; 
+    }
+}
+
+@media (max-width: 321px) {
+    h2 {
+        font-size: 1.8rem;
+    }
+    
+    /* Top Header */
+    div.top {
+        padding: 0px 19px 20px 19px; 
+    }
+
+    /* Info Display */
+    div.info-display {
+        padding: 0px 19px; 
+    }
 }
