--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,17 @@
 /* Setup Styles */
 
 html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
-
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
 input[type=number] {
   -moz-appearance: textfield;
 }
-
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
-
 /* Base Styles */
-
 html {
     font-size: 125%; 
 }
@@ -26,7 +20,6 @@ body {
     height: 100vh; 
     display: flex; 
     flex-direction: column; 
-    /* background-color: #82C0CC; */
 }
 
 main {
@@ -47,8 +40,7 @@ main {
     padding-bottom: 50px;
 }
 
-h1,
-h2 {
+h1, h2 {
     font-family: 'Yeseva One', serif;
 }
 
@@ -83,7 +75,6 @@ div.info-display {
 }
 
 /* Form */
-
 form {
     font-family: 'Roboto', sans-serif;
     font-weight: 300; 
@@ -123,7 +114,6 @@ div.input-and-button {
 }
 
 /* General Button Styles */
-
 button {
     border: 2px solid #16697A;
     background-color: #16697A;
@@ -143,7 +133,6 @@ button:hover {
 }
 
 /* Control Buttons */
-
 div.control-buttons {
     padding: 20px 20px;
     margin-bottom: 0px; 
@@ -164,7 +153,6 @@ div.control-buttons button:hover {
 }
 
 /* Footer */
-
 footer { 
     background-color: black;
     color: white; 
@@ -200,90 +188,64 @@ a:focus {
 }
 
 /* Media Queries */
-
 @media (max-width: 470px) {
     html {
         font-size: 110%; 
     }
-
     form {
         padding: 25px 25px; 
     }
 }
-
 @media (max-width: 430px) {
     h1 {
         font-size: 2.3rem; 
     }
-
     h2 {
         font-size: 1.9rem; 
     }
-
-    /* Top Header */
     div.top {
         padding: 0px 50px 20px 50px; 
     }
-
-    /* Info Display */
     div.info-display {
         padding: 0px 50px; 
     }
 }
-
 @media (max-width: 381px) {
-    /* Top Header */
     div.top {
         padding: 0px 40px 20px 40px; 
     }
-
-    /* Info Display */
     div.info-display {
         padding: 0px 40px; 
     }
 }
-
 @media (max-width: 376px) {
     button {
         min-width: 142px;
     }
 }
-
 @media (max-width: 365px) {
-    /* Top Header */
     div.top {
         padding: 0px 30px 20px 30px; 
     }
-
-    /* Info Display */
     div.info-display {
         padding: 0px 30px; 
     }
 }
-
 @media (max-width: 343px) {
-    /* Top Header */
     div.top {
         padding: 0px 20px 20px 20px; 
     }
-
-    /* Info Display */
     div.info-display {
         padding: 0px 20px; 
     }
 }
-
 @media (max-width: 321px) {
     h2 {
         font-size: 1.8rem;
     }
-    
-    /* Top Header */
     div.top {
         padding: 0px 19px 20px 19px; 
     }
-
-    /* Info Display */
     div.info-display {
         padding: 0px 19px; 
     }
